--- a/src/sass/components/_inputs.scss
+++ b/src/sass/components/_inputs.scss
@@ -6,12 +6,14 @@
 .input-block__field {
   border: none;
   outline: none;
+  padding: 5px;
   width: 150px;
   height: 25px;
   border-radius: 0.3rem;
   background-color: $input-background_color;
+  box-sizing: border-box;
   &:focus {
-    border: 1.5px solid $selected_color;
+    border: 2px solid $selected_color;
   }
 }
 
