--- a/src/sass/components/_inputs.scss
+++ b/src/sass/components/_inputs.scss
@@ -24,6 +24,35 @@
 .water-input__subtitle {
   color: $text_color;
   font-size: 1.3rem;
-  margin-top: 0.5rem;
-  margin: 0.5rem 0;
+  margin-top: 1.2rem;
+}
+
+.radio-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  height: 25px;
+  width: 25px;
+  background: $input-background_color;
+  border: 2px solid $selected_color;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.radio-button:checked::before {
+  width: 18px;
+  height: 18px;
+  content: '🗸︎';
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+  border-radius: 50%;
+  background: $selected_color;
 }
