--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,7 @@
 @import '../../node_modules/normalize.css/normalize.css';
 
+@import '../../node_modules/katex/dist/katex.min.css';
+
 @import '../sass/abstracts/colors';
 
 @import '../sass/base/base';
@@ -15,3 +17,7 @@
 @import '../sass/components/buttons';
 
 @import '../sass/components/boilers-table';
+
+@import '../sass/components/calc-block';
+
+@import '../sass/components/ionic-table';
