--- a/src/sass/components/_calc-block.scss
+++ b/src/sass/components/_calc-block.scss
@@ -25,11 +25,22 @@
   transition: 0.5s;
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
+  text-align: justify;
 }
 
 .calc-block__content {
   padding: 20px;
   line-height: 150%;
+}
+
+.scheme-choice {
+  font-weight: bold;
+  color: green;
+}
+
+.calc-block__title {
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
 .calc-img {
@@ -40,6 +51,7 @@
 
 .calc-img-title {
   text-align: center;
+  margin-bottom: 1rem;
 }
 
 .block-hidden {
