--- a/src/sass/components/_ionic-table.scss
+++ b/src/sass/components/_ionic-table.scss
@@ -1,4 +1,4 @@
-.ionic-table {
+.calc-block__table {
   border: 1px solid $background_color;
   border-collapse: collapse;
   th,
@@ -8,11 +8,4 @@
     border: 1px solid $background_color;
     padding: 5px;
   }
-}
-
-.ionic-table__th {
-  font-size: 1rem;
-  text-align: end;
-  border: 1px solid $background_color;
-  padding: 5px;
 }
