feat: add Na cations second stage filter calculation

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,8 @@
 
 @import '../sass/layout/boilers-table';
 
+@import '../sass/layout/media-print';
+
 @import '../sass/components/header';
 
 @import '../sass/components/inputs';
