--- a/src/sass/components/_calc-block.scss
+++ b/src/sass/components/_calc-block.scss
@@ -26,17 +26,22 @@
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
   text-align: justify;
-  table {
+}
+
+.calc-block__table-container {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.calc-block__table {
+  border: 1px solid $background_color;
+  border-collapse: collapse;
+  th,
+  td {
+    font-size: 1rem;
+    text-align: center;
     border: 1px solid $background_color;
-    border-collapse: collapse;
-    margin-bottom: 1rem;
-    th,
-    td {
-      font-size: 1rem;
-      text-align: center;
-      border: 1px solid $background_color;
-      padding: 5px;
-    }
+    padding: 5px;
   }
 }
 
@@ -56,6 +61,11 @@
   margin-top: 1rem;
 }
 
+.calc-img__container {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .calc-img {
   display: block;
   margin-left: auto;
@@ -64,7 +74,6 @@
 
 .calc-img-title {
   text-align: center;
-  margin-bottom: 1rem;
 }
 
 .block-hidden {
@@ -77,8 +86,4 @@
 
 .calc-text_invalid {
   color: $error_color;
-}
-
-.table-tittle {
-  margin-top: 0.5rem;
 }
