feat: add decarbonizes calculation

--- a/src/sass/components/_images.scss
+++ b/src/sass/components/_images.scss
@@ -5,3 +5,15 @@
 .feed-water-treatment-scheme-img {
   width: 500px;
 }
+
+.nomogram-free-CO2-img {
+  width: 400px;
+}
+
+.desorption-temperature-img {
+  width: 250px;
+}
+
+.average-driving-force-desorption-img {
+  width: 350px;
+}
