feat: add print and export to pdf func

--- a/src/sass/components/_calc-block.scss
+++ b/src/sass/components/_calc-block.scss
@@ -36,6 +36,10 @@
   max-height: 0;
 }
 
+.content-hide {
+  display: none;
+}
+
 .calc-block__table-container {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
